src/test/testData/dummy/dummy.glsl
int a3 = normalize<error descr="No matching function for call to normalize().">(2, 3)</error>;